[workspace]
members = [
  "blokus",
  "chess_",
  "connection",
  "qwirkle",
  "tzf8",
]

[package]
name = "ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
graphviz-rust = "*"
rstest = "*"